--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ data/
 pre-commit-config.yaml
 artifacts/
 modeling/models/
-.conda
+.conda/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
