--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 datasets==2.10.1
+fastapi==0.95.0
 numpy==1.23.4
+pandas==1.5.1
+pydantic==1.10.7
 torch==1.13.0
 torchmetrics==0.11.0
 tqdm==4.64.1
 transformers==4.27.3
+uvicorn~=0.20.0
