add changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ pre-commit-config.yaml
 artifacts/
 app/modeling/models/
 .conda/
+.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
