--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 datasets==2.10.1
 fastapi==0.95.0
+imbalanced_learn==0.10.1
+imblearn==0.0
 mlflow==2.2.2
+nlpaug==1.1.11
 numpy==1.23.4
 pandas==1.5.1
 pydantic==1.10.7
+scikit_learn==1.2.2
 torch==1.13.0
 torchmetrics==0.11.0
 tqdm==4.64.1
