--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy==1.23.4
 pandas==1.5.1
 pydantic==1.10.7
 scikit_learn==1.2.2
-torch==1.13.0
+torch>=1.13.1
 torchmetrics==0.11.0
 tqdm==4.64.1
 transformers==4.27.3
